[build-system]
requires = ["setuptools", "wheel", "setuptools_scm[toml]", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "kstar-planner"
description = "Kstar Planner is an Automated PDDL based planner that includes planners for top-k and top-quality planning computational tasks."
readme = "README-pypi.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
keywords = ["planning"]
authors = [
    {name = "Michael Katz, Junkyu Lee", email="michael.katz1@ibm.com"}
]

dependencies = []
dynamic = ["version"]

classifiers = [
"License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]

[project.urls]
"Homepage" = "https://github.com/IBM/kstar"

[project.scripts]
kstar_planner = "kstar_planner.__main__:main"

[tool.setuptools]
py-modules = ["_custom_build"]

[tool.setuptools.cmdclass]
build_py = "_custom_build.BuildPy"
build_ext = "_custom_build.BuildCMakeExt"
bdist_wheel = "_custom_build.bdist_wheel"

[tool.setuptools.package-data]
kstar = ["builds/release/bin/**/*", "builds/release/bin/*", "driver/portfolios/*"]

[tool.setuptools.packages.find]
include = ["kstar_planner*"]

[tool.setuptools_scm]
write_to = "kstar_planner/__version__.py"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
